WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15762
XSLStylesheet loads subresources from a wrong URL
https://bugs.webkit.org/show_bug.cgi?id=15762
Summary
XSLStylesheet loads subresources from a wrong URL
Alexey Proskuryakov
Reported
2007-10-30 04:03:45 PDT
Discovered with the new Web Inspector XSLT logging: parsing errors were attributed to a wrong file. Fixing this made an existing test fail, but the test was incorrect (the new behavior matches xsltproc and WinIE). Patch forthcoming.
Attachments
proposed fix
(2.56 KB, patch)
2007-10-30 04:19 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed fix
(3.19 KB, patch)
2007-10-30 04:26 PDT
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-10-30 04:19:01 PDT
Created
attachment 16945
[details]
proposed fix ...as for Firefox, it passes neither variant - AFAICT, it doesn't try to load the DTD.
Alexey Proskuryakov
Comment 2
2007-10-30 04:26:59 PDT
Created
attachment 16946
[details]
proposed fix Oops, there was one more test with the same problem.
Anders Carlsson
Comment 3
2007-10-30 11:48:22 PDT
Comment on
attachment 16946
[details]
proposed fix Does href() return the absolute URL? r=me
Alexey Proskuryakov
Comment 4
2007-10-30 12:18:51 PDT
(In reply to
comment #3
)
> Does href() return the absolute URL?
It did in my tests, and I think it's always supposed to.
Alexey Proskuryakov
Comment 5
2007-10-31 01:34:09 PDT
Committed revision 27302.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug