        Reviewed by Anders.

http://bugs.webkit.org/show_bug.cgi?id=15762
        XSLStylesheet loads subresources from a wrong URL

        Covered by corrected existing tests.

        * xml/XSLStyleSheet.cpp:
        (WebCore::XSLStyleSheet::parseString): Pass stylesheet URL, not
        the document one.



Canonical link: https://commits.webkit.org/21223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27302 268f45cc-cd09-0410-ab3c-d52691b4dbfc